se modulariza app

--- a/src/app/pages/busqueda/busqueda.component.html
+++ b/src/app/pages/busqueda/busqueda.component.html
@@ -31,6 +31,7 @@
       <app-listado
         [elementosAListar]="elementos"
         (eventDetallarItem)="handlerDetalleItem($event)"
+        [activarDetalle]="true"
       ></app-listado>
     </div>
   </div>
