--- a/src/app/pages/peliculas/components/listado-peliculas/listado-peliculas.component.html
+++ b/src/app/pages/peliculas/components/listado-peliculas/listado-peliculas.component.html
@@ -1,1 +1,4 @@
-<app-listado [elementosAListar]="listadoPeliculas"></app-listado>
+<app-listado
+  [elementosAListar]="listadoPeliculas"
+  (eventDetallarItem)="handlerDetalleItem($event)"
+></app-listado>
