--- a/src/app/modules/listado/listado.component.html
+++ b/src/app/modules/listado/listado.component.html
@@ -14,6 +14,7 @@
           {{ key }}: {{ elemento[key] }}
         </li>
         <input
+          *ngIf="activarDetalle"
           type="button"
           class="btn btn-outline-success"
           value="detalle"
@@ -30,7 +31,7 @@
         <th *ngFor="let key of elementosAListar[0] | ObjKeysToArray">
           {{ key }}
         </th>
-        <th>Accion</th>
+        <th *ngIf="activarDetalle">Accion</th>
       </tr>
     </thead>
     <tbody>
@@ -40,6 +41,7 @@
         </td>
         <td>
           <input
+            *ngIf="activarDetalle"
             type="button"
             class="btn btn-outline-success"
             value="detalle"
