--- a/src/app/pages/peliculas/components/listado-peliculas/listado-peliculas.component.html
+++ b/src/app/pages/peliculas/components/listado-peliculas/listado-peliculas.component.html
@@ -1,4 +1,4 @@
 <app-listado
-  [elementosAListar]="listadoPeliculas"
-  (eventDetallarItem)="handlerDetalleItem($event)"
+  [listaDeElementos]="listadoPeliculas"
+  (eventEnviarElemento)="handlerDetalleItem($event)"
 ></app-listado>
