--- a/src/app/modules/listado/listado.component.html
+++ b/src/app/modules/listado/listado.component.html
@@ -2,7 +2,7 @@
   *ngIf="config.habilitarAlternarVista"
   type="button"
   class="btn btn-outline-primary"
-  value="Cambiar vista"
+  [value]="verComo"
   (click)="cambiarVista()"
 />
 <div *ngIf="alternarVista; then thenBlock; else elseBlock"></div>
