se configura para poder alternar el tipo de vista

--- a/src/app/modules/listado/listado.component.html
+++ b/src/app/modules/listado/listado.component.html
@@ -2,9 +2,10 @@
   *ngIf="config.habilitarAlternarVista"
   type="button"
   class="btn btn-outline-primary"
-  [value]="verComo"
+  [value]="'Ver como ' + siguienteVista"
   (click)="cambiarVista()"
 />
+
 <div *ngIf="alternarVista; then thenBlock; else elseBlock"></div>
 
 <ng-template #thenBlock>
