--- a/src/app/pages/busqueda/busqueda.component.html
+++ b/src/app/pages/busqueda/busqueda.component.html
@@ -31,7 +31,11 @@
       <app-listado
         [listaDeElementos]="elementos"
         (eventEnviarElemento)="handlerDetalleItem($event)"
-        [config]="{ habilitarDetalle: true, habilitarAlternarVista: true }"
+        [config]="{
+          habilitarDetalle: true,
+          habilitarAlternarVista: true,
+          verComo: 'tabla'
+        }"
       ></app-listado>
     </div>
   </div>
