se agregar imagen a la tabla paises

--- a/src/app/modules/listado/components/tabla/tabla.component.html
+++ b/src/app/modules/listado/components/tabla/tabla.component.html
@@ -12,9 +12,8 @@
       <td *ngFor="let item of elemento | keyvalue">
         {{ item.value }}
       </td>
-      <td>
+      <td *ngIf="habilitarDetalle">
         <input
-          *ngIf="habilitarDetalle"
           type="button"
           class="btn btn-outline-success"
           value="detalle"
