--- a/src/app/modules/tabla-paises/components/tabla-paises.component.html
+++ b/src/app/modules/tabla-paises/components/tabla-paises.component.html
@@ -1,31 +1,45 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th *ngFor="let item of listadoPaises[0] | keyvalue">
-        {{ item.key }}
-      </th>
-      <th *ngIf="activarDetalle">Accion</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let elemento of listadoPaises">
-      <td [ngClass]="''" *ngFor="let item of elemento | keyvalue">
-        <img
-          *ngIf="item.key === 'bandera'; else elseBlock"
-          [ngStyle]="{ width: '32px' }"
-          [src]="item.value"
-          alt=""
-        />
-        <ng-template #elseBlock>{{ item.value }}</ng-template>
-      </td>
-      <td *ngIf="activarDetalle">
-        <input
-          type="button"
-          class="btn btn-outline-success"
-          value="detalle"
-          (click)="seleccionarPais(elemento)"
-        />
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div [ngClass]="'container-fluid'">
+  <div [ngClass]="'row justify-content-center'">
+    <div [ngClass]="'col'">
+      <table [ngClass]="'table table-borderer'">
+        <thead>
+          <tr>
+            <th
+              [ngClass]="['text-capitalize', 'text-center']"
+              *ngFor="let item of listadoPaises[0] | keyvalue"
+            >
+              {{ item.key }}
+            </th>
+            <th
+              [ngClass]="['text-capitalize', 'text-center']"
+              *ngIf="activarSeleccion"
+            >
+              Accion
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr [ngClass]="'text-center'" *ngFor="let elemento of listadoPaises">
+            <td *ngFor="let item of elemento | keyvalue">
+              <img
+                *ngIf="item.key === 'bandera'; else elseBlock"
+                [ngStyle]="{ width: '32px' }"
+                [src]="item.value"
+                alt=""
+              />
+              <ng-template #elseBlock>{{ item.value }}</ng-template>
+            </td>
+            <td *ngIf="activarSeleccion">
+              <input
+                type="button"
+                [ngClass]="['btn', 'btn-outline-success']"
+                value="Seleccionar"
+                (click)="seleccionarPais(elemento)"
+              />
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
