--- a/src/app/modules/listado/components/lista/lista.component.html
+++ b/src/app/modules/listado/components/lista/lista.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li class="mt-5" *ngFor="let elemento of listaDeElementos">
+  <li [ngClass]="'mt-5'" *ngFor="let elemento of listaDeElementos">
     <ul>
       <li type="circle" *ngFor="let item of elemento | keyvalue">
         {{ item.key }}: {{ item.value }}
@@ -7,7 +7,7 @@
       <input
         *ngIf="habilitarDetalle"
         type="button"
-        class="btn btn-outline-success"
+        [ngClass]="'btn btn-outline-success'"
         value="detalle"
         (click)="seleccionarItem(elemento)"
       />
