--- a/src/app/modules/listado/listado.component.html
+++ b/src/app/modules/listado/listado.component.html
@@ -1,7 +1,7 @@
 <input
   *ngIf="config.habilitarAlternarVista"
   type="button"
-  class="btn btn-outline-primary"
+  [ngClass]="'btn btn-outline-primary'"
   [value]="'Ver como ' + siguienteVista"
   (click)="cambiarVista()"
 />
