--- a/src/app/pages/actores/components/alta-actores/alta-actores.component.html
+++ b/src/app/pages/actores/components/alta-actores/alta-actores.component.html
@@ -1,7 +1,127 @@
-<p>alta-actores works!</p>
-<div class="row justify-content-end">
-  <app-tabla-paises
-    [ngClass]="'col-8'"
-    [activarSeleccion]="true"
-  ></app-tabla-paises>
+<div class="container-fluid py-4">
+  <div class="row justify-content-evenly align-items-md-stretch">
+    <div class="m-md-3 mt-1 col-md-4">
+      <div class="h-100 p-5 text-bg-dark rounded-3">
+        <h4 class="mb-3">Billing address</h4>
+        <form class="needs-validation" novalidate>
+          <div class="row g-3 justify-content-evenly">
+            <div class="col-sm-6">
+              <label for="firstName" class="form-label">First name</label>
+              <input
+                type="text"
+                class="form-control"
+                id="firstName"
+                placeholder=""
+                value=""
+                required
+              />
+              <div class="invalid-feedback">Valid first name is required.</div>
+            </div>
+
+            <div class="col-sm-6">
+              <label for="lastName" class="form-label">Last name</label>
+              <input
+                type="text"
+                class="form-control"
+                id="lastName"
+                placeholder=""
+                value=""
+                required
+              />
+            </div>
+
+            <div class="col-12">
+              <label for="username" class="form-label">Username</label>
+              <div class="input-group has-validation">
+                <span class="input-group-text">@</span>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="username"
+                  placeholder="Username"
+                  required
+                />
+              </div>
+            </div>
+
+            <div class="col-12">
+              <label for="email" class="form-label"
+                >Email
+                <span class="text-body-secondary">(Optional)</span></label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="you@example.com"
+              />
+            </div>
+
+            <div class="col-12">
+              <label for="address" class="form-label">Address</label>
+              <input
+                type="text"
+                class="form-control"
+                id="address"
+                placeholder="1234 Main St"
+                required
+              />
+            </div>
+
+            <div class="col-12">
+              <label for="address2" class="form-label"
+                >Address 2
+                <span class="text-body-secondary">(Optional)</span></label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="address2"
+                placeholder="Apartment or suite"
+              />
+            </div>
+
+            <div class="col-md-5">
+              <label for="country" class="form-label">Country</label>
+              <select class="form-select" id="country" required>
+                <option *ngIf="pais">
+                  {{ pais.nombre }}
+                </option>
+              </select>
+            </div>
+
+            <div class="col-md-4">
+              <label for="state" class="form-label">State</label>
+              <select class="form-select" id="state" required>
+                <option *ngIf="pais">
+                  {{ pais.capital }}
+                </option>
+              </select>
+            </div>
+          </div>
+
+          <div class="row justify-content-center">
+            <div *ngIf="pais" class="mt-2 col-md-6">
+              <img class="w-100" [src]="pais.bandera" alt="bandera" />
+            </div>
+          </div>
+
+          <button class="mt-3 w-100 btn btn-primary btn-lg" type="button">
+            Continue to checkout
+          </button>
+        </form>
+      </div>
+    </div>
+    <div class="m-md-3 mt-1 col-md-5">
+      <div class="h-100 p-5 bg-body-tertiary rounded-3 text-center">
+        <h2>Paises</h2>
+        <app-tabla-paises
+          [activarSeleccion]="true"
+          (paisSeleccionado)="handlerPais($event)"
+        ></app-tabla-paises>
+      </div>
+    </div>
+  </div>
+
+  <footer class="pt-3 mt-4 text-body-secondary border-top">&copy; 2023</footer>
 </div>
