--- a/src/app/pages/actores/components/alta-actores/alta-actores.component.html
+++ b/src/app/pages/actores/components/alta-actores/alta-actores.component.html
@@ -9,23 +9,25 @@
               <label for="firstName" class="form-label">First name</label>
               <input
                 type="text"
+                name="nombre"
                 class="form-control"
                 id="firstName"
                 placeholder=""
-                value=""
+                [(ngModel)]="actor.nombre"
                 required
               />
-              <div class="invalid-feedback">Valid first name is required.</div>
+              <div [ngClass]="validar">Valid first name is required.</div>
             </div>
 
             <div class="col-sm-6">
               <label for="lastName" class="form-label">Last name</label>
               <input
                 type="text"
+                name="apellido"
                 class="form-control"
                 id="lastName"
                 placeholder=""
-                value=""
+                [(ngModel)]="actor.apellido"
                 required
               />
             </div>
@@ -36,9 +38,11 @@
                 <span class="input-group-text">@</span>
                 <input
                   type="text"
+                  name="usuario"
                   class="form-control"
                   id="username"
                   placeholder="Username"
+                  [(ngModel)]="actor.usuario"
                   required
                 />
               </div>
@@ -50,34 +54,25 @@
                 <span class="text-body-secondary">(Optional)</span></label
               >
               <input
+                name="email"
                 type="email"
                 class="form-control"
                 id="email"
                 placeholder="you@example.com"
+                [(ngModel)]="actor.email"
               />
             </div>
 
             <div class="col-12">
               <label for="address" class="form-label">Address</label>
               <input
+                name="direccion"
                 type="text"
                 class="form-control"
                 id="address"
                 placeholder="1234 Main St"
+                [(ngModel)]="actor.direccion"
                 required
-              />
-            </div>
-
-            <div class="col-12">
-              <label for="address2" class="form-label"
-                >Address 2
-                <span class="text-body-secondary">(Optional)</span></label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="address2"
-                placeholder="Apartment or suite"
               />
             </div>
 
@@ -106,7 +101,11 @@
             </div>
           </div>
 
-          <button class="mt-3 w-100 btn btn-primary btn-lg" type="button">
+          <button
+            class="mt-3 w-100 btn btn-primary btn-lg"
+            type="button"
+            (click)="cargar()"
+          >
             Continue to checkout
           </button>
         </form>
