--- a/src/app/pages/actores/components/alta-actores/alta-actores.component.html
+++ b/src/app/pages/actores/components/alta-actores/alta-actores.component.html
@@ -104,7 +104,7 @@
           <button
             class="mt-3 w-100 btn btn-primary btn-lg"
             type="button"
-            (click)="cargar()"
+            (click)="crearActor()"
           >
             Continue to checkout
           </button>
