--- a/src/app/pages/peliculas/components/alta-peliculas/alta-peliculas.component.html
+++ b/src/app/pages/peliculas/components/alta-peliculas/alta-peliculas.component.html
@@ -1,1 +1,100 @@
-<p>alta-peliculas works!</p>
+<p class="text-center">alta-peliculas</p>
+
+<div class="container-fluid py-4">
+  <div class="row justify-content-evenly align-items-md-stretch">
+    <div class="m-md-3 mt-1 col-md-4">
+      <div class="h-100 p-5 text-bg-secondary rounded-3">
+        <h4 class="text-center mb-3">Alta pelicula</h4>
+        <form class="needs-validation" novalidate>
+          <div class="row g-3 justify-content-evenly">
+            <div class="col-12">
+              <label for="firstName" class="form-label">Nombre</label>
+              <input
+                type="text"
+                name="nombre"
+                class="form-control"
+                id="firstName"
+                required
+              />
+            </div>
+
+            <div class="col-sm-6">
+              <label for="tipo" class="form-label">Tipo</label>
+              <select class="form-select" id="tipo" required>
+                <option value="terror">Terror</option>
+              </select>
+            </div>
+            <div class="col-sm-6">
+              <label for="fechaEstreno" class="form-label">Fecha Estreno</label>
+              <input
+                type="date"
+                name="fechaEstreno"
+                class="form-control"
+                id="fechaEstreno"
+                placeholder="Fecha De Estreno"
+                required
+              />
+            </div>
+
+            <div class="col-12">
+              <label for="cantPublico" class="form-label"
+                >Cantidad Publico</label
+              >
+              <div class="input-group has-validation">
+                <input
+                  type="number"
+                  name="cantPublico"
+                  class="form-control"
+                  id="cantPublico"
+                  placeholder="Cantidad de publico"
+                  required
+                />
+              </div>
+            </div>
+
+            <div class="col-12">
+              <label for="imagen" class="form-label">Imagen</label>
+              <input
+                name="imagen"
+                type="url"
+                class="form-control"
+                id="imagen"
+                placeholder="Imagen Url"
+              />
+            </div>
+          </div>
+
+          <div class="row justify-content-center">
+            <div class="mt-2 text-center col-md-12">
+              <label for="actor" class="form-label">Actor Elegido</label>
+              <input
+                id="actor"
+                *ngIf="actor"
+                type="text"
+                class="form-control"
+                disabled
+                [value]="actor.apellido + ', ' + actor.nombre"
+              />
+            </div>
+          </div>
+
+          <button
+            class="mt-3 w-100 btn btn-success btn-lg"
+            type="button"
+            (click)="crearPelicula()"
+          >
+            Crear
+          </button>
+        </form>
+      </div>
+    </div>
+    <div class="m-md-3 mt-1 col-md-4">
+      <app-listado-actores
+        [listadoDeActores]="actorService.getActores()"
+        (enventSelectActor)="handlerGetActor($event)"
+      ></app-listado-actores>
+    </div>
+  </div>
+
+  <footer class="pt-3 mt-4 text-body-secondary border-top">&copy; 2023</footer>
+</div>
