--- a/src/app/pages/peliculas/components/listado-peliculas/listado-peliculas.component.html
+++ b/src/app/pages/peliculas/components/listado-peliculas/listado-peliculas.component.html
@@ -2,7 +2,7 @@
 <app-listado
   [listaDeElementos]="listadoPeliculas"
   [config]="{
-    habilitarDetalle: true,
+    habilitarDetalle: false,
     habilitarAlternarVista: false,
     verComo: 'tabla'
   }"
