--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -27,13 +27,11 @@
         <li class="nav-item dropdown">
           <a
             class="text-light nav-link dropdown-toggle"
-            href="#"
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
-            routerLink="peliculas"
           >
-            Peliculas
+            <span routerLink="peliculas">Peliculas</span>
           </a>
           <ul class="dropdown-menu">
             <li>
@@ -54,13 +52,11 @@
         <li class="nav-item dropdown">
           <a
             class="text-light nav-link dropdown-toggle"
-            href="#"
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
-            routerLink="actores"
           >
-            Actores
+            <span routerLink="actores">Actores</span>
           </a>
           <ul class="dropdown-menu">
             <li>
@@ -74,26 +70,29 @@
       </ul>
     </div>
   </div>
-
   <div class="d-flex">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <ul
+      class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll"
+      style="--bs-scroll-height: 100px"
+    >
       <li class="nav-item dropdown">
         <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="navbarDropdown"
+          class="text-light nav-link dropdown-toggle"
           role="button"
           data-bs-toggle="dropdown"
           aria-expanded="false"
+          routerLink="peliculas"
         >
           <img
-            [src]=""
+            src="../../../assets/images/user_default.png"
             alt="img-usuario"
             [ngStyle]="{ width: '32px', 'border-radius': '100%' }"
           />{{ "User" }}
         </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item">Logout</a></li>
+        <ul class="dropdown-menu">
+          <li>
+            <a class="dropdown-item" routerLink="peliculas/alta">Logout</a>
+          </li>
         </ul>
       </li>
     </ul>
