--- a/src/app/pages/peliculas/components/alta-peliculas/alta-peliculas.component.html
+++ b/src/app/pages/peliculas/components/alta-peliculas/alta-peliculas.component.html
@@ -1,11 +1,15 @@
 <p class="text-center">alta-peliculas</p>
 
 <div class="container-fluid py-4">
-  <div class="row justify-content-evenly align-items-md-stretch">
-    <div class="m-md-3 mt-1 col-md-4">
+  <div class="row justify-content-center align-items-md-stretch">
+    <div class="m-md-1 mt-1 col-md-5">
       <div class="h-100 p-5 text-bg-secondary rounded-3">
         <h4 class="text-center mb-3">Alta pelicula</h4>
-        <form class="needs-validation" novalidate>
+        <form
+          [formGroup]="formAltaPelicula"
+          class="needs-validation"
+          novalidate
+        >
           <div class="row g-3 justify-content-evenly">
             <div class="col-12">
               <label for="firstName" class="form-label">Nombre</label>
@@ -14,14 +18,17 @@
                 name="nombre"
                 class="form-control"
                 id="firstName"
-                required
+                formControlName="nombre"
               />
             </div>
 
             <div class="col-sm-6">
               <label for="tipo" class="form-label">Tipo</label>
-              <select class="form-select" id="tipo" required>
+              <select class="form-select" id="tipo" formControlName="tipo">
                 <option value="terror">Terror</option>
+                <option value="comedia">Comedia</option>
+                <option value="amor">Amor</option>
+                <option value="otros">Otros</option>
               </select>
             </div>
             <div class="col-sm-6">
@@ -31,8 +38,8 @@
                 name="fechaEstreno"
                 class="form-control"
                 id="fechaEstreno"
+                formControlName="fechaEstreno"
                 placeholder="Fecha De Estreno"
-                required
               />
             </div>
 
@@ -45,9 +52,9 @@
                   type="number"
                   name="cantPublico"
                   class="form-control"
+                  formControlName="cantPublico"
                   id="cantPublico"
                   placeholder="Cantidad de publico"
-                  required
                 />
               </div>
             </div>
@@ -59,6 +66,7 @@
                 type="url"
                 class="form-control"
                 id="imagen"
+                formControlName="imagen"
                 placeholder="Imagen Url"
               />
             </div>
@@ -72,8 +80,7 @@
                 *ngIf="actor"
                 type="text"
                 class="form-control"
-                disabled
-                [value]="actor.apellido + ', ' + actor.nombre"
+                formControlName="actor"
               />
             </div>
           </div>
@@ -88,7 +95,7 @@
         </form>
       </div>
     </div>
-    <div class="m-md-3 mt-1 col-md-4">
+    <div class="m-md-1 mt-1 col-md-7">
       <app-listado-actores
         [listadoDeActores]="actorService.getActores()"
         (enventSelectActor)="handlerGetActor($event)"
