--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -65,6 +65,11 @@
             <li>
               <a class="dropdown-item" routerLink="actores/listado">Listado</a>
             </li>
+            <li>
+              <a class="dropdown-item" routerLink="actores/actorpelicula"
+                >Actor-Pelicula</a
+              >
+            </li>
           </ul>
         </li>
       </ul>
@@ -81,7 +86,6 @@
           role="button"
           data-bs-toggle="dropdown"
           aria-expanded="false"
-          routerLink="peliculas"
         >
           <img
             src="../../../assets/images/user_default.png"
