--- a/src/app/pages/peliculas/components/alta-peliculas/alta-peliculas.component.html
+++ b/src/app/pages/peliculas/components/alta-peliculas/alta-peliculas.component.html
@@ -32,27 +32,29 @@
               </select>
             </div>
             <div class="col-sm-6">
-              <label for="fechaEstreno" class="form-label">Fecha Estreno</label>
+              <label for="fechaDeEstreno" class="form-label"
+                >Fecha Estreno</label
+              >
               <input
                 type="date"
-                name="fechaEstreno"
+                name="fechaDeEstreno"
                 class="form-control"
-                id="fechaEstreno"
-                formControlName="fechaEstreno"
+                id="fechaDeEstreno"
+                formControlName="fechaDeEstreno"
                 placeholder="Fecha De Estreno"
               />
             </div>
 
             <div class="col-12">
-              <label for="cantPublico" class="form-label"
+              <label for="cantidadDePulibico" class="form-label"
                 >Cantidad Publico</label
               >
               <div class="input-group has-validation">
                 <input
                   type="number"
-                  name="cantPublico"
+                  name="cantidadDePulibico"
                   class="form-control"
-                  formControlName="cantPublico"
+                  formControlName="cantidadDePulibico"
                   id="cantPublico"
                   placeholder="Cantidad de publico"
                 />
@@ -60,13 +62,13 @@
             </div>
 
             <div class="col-12">
-              <label for="imagen" class="form-label">Imagen</label>
+              <label for="fotoDeLaPelicula" class="form-label">Imagen</label>
               <input
-                name="imagen"
+                name="fotoDeLaPelicula"
                 type="url"
                 class="form-control"
                 id="imagen"
-                formControlName="imagen"
+                formControlName="fotoDeLaPelicula"
                 placeholder="Imagen Url"
               />
             </div>
