--- a/src/app/pages/actores/components/actor-pelicula/actor-pelicula.component.html
+++ b/src/app/pages/actores/components/actor-pelicula/actor-pelicula.component.html
@@ -37,15 +37,8 @@
   <div class="row align-items-md-stretch">
     <div class="m-md-3 mt-1 col-md-5">
       <div class="h-100 p-5 text-bg-dark rounded-3">
-        <h2>Change the background</h2>
-        <p>
-          Swap the background-color utility and add a `.text-*` color utility to
-          mix up the jumbotron look. Then, mix and match with additional
-          component themes and more.
-        </p>
-        <button class="btn btn-outline-light" type="button">
-          Example button
-        </button>
+        <h2>Pais del Actor</h2>
+        <app-detalle *ngIf="actor" [itemADetallar]="actor.pais"></app-detalle>
       </div>
     </div>
     <div class="m-md-3 mt-1 col-md-5">
@@ -59,16 +52,8 @@
     </div>
     <div class="m-md-3 mt-1 col-md-5">
       <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-        <h2>Add borders</h2>
-        <p>
-          Or, keep it light and add a border for some added definition to the
-          boundaries of your content. Be sure to look under the hood at the
-          source HTML here as we've adjusted the alignment and sizing of both
-          column's content for equal-height.
-        </p>
-        <button class="btn btn-outline-secondary" type="button">
-          Example button
-        </button>
+        <h2>Detalles del Actor</h2>
+        <app-detalle *ngIf="actor" [itemADetallar]="actor"></app-detalle>
       </div>
     </div>
   </div>
